# batchprot

./: .env.example  .gitignore  .npmrc  ARCHITECTURE.md  CLASS_DIAGRAM_README.md  PRD.md  README-mfa-script.md  README.md  SCRIPT.md  UNIT_TEST_PLAN.md  biome.json  package.json  peanut_allergens.fasta  pnpm-lock.yaml  pnpm-workspace.yaml  protein_analysis_class_diagram.excalidraw.json  pyproject.toml  sst-env.d.ts  sst.config.ts  sst.pyi  start-database.sh  tsconfig.json  turbo.json  update-mfa-credentials.sh
.cursor/rules/: fastapi.mdc
apps/app/: .env.example  env.ts  middleware.ts  next.config.ts  package.json  tsconfig.json  vitest.config.ts
apps/app/__tests__/: signin.test.tsx
apps/app/app/: global-error.tsx  layout.tsx
apps/app/auth/: client.ts  server.ts
apps/app/components/: app-header.tsx  logo.tsx  protein-details-dialog.tsx  protein-form.tsx  protein-table.tsx
apps/app/hooks/: use-debounce.ts  (+1 more)
apps/email/: package.json
functions/: .env.example  Dockerfile  package.json  pyproject.toml  sst.pyi
functions/src/functions/: api.py  main.py
functions/src/functions/api/: deps.py
functions/src/functions/api/api_v1/: api.py
functions/src/functions/api/api_v1/endpoints/: auth_check.py  health.py  protein_analysis.py
functions/src/functions/core/: config.py
functions/src/functions/schemas/: api.py  protein_analysis.py
functions/src/functions/security/: security.py
functions/src/functions/services/: protein_analysis.py  protein_analyzers.py
functions/tests/: test_health.py
infra/: api.ts  rds.ts  studio.ts  vpc.ts  web.ts
scripts/: initialize.ts  update.ts
(+61 files in other folders)
