[project]
name = "aws-fastapi"
version = "0.1.0"
description = "A SST app"
authors = [{ name = "Trevor Pfizenmaier", email = "tpfize1@wgu.edu" }]
dependencies = []

# It is recommended to specify your python version to match your Lambda runtime otherwise you may
# encounter issues with dependencies.
requires-python = "==3.12.*"

[tool.uv.workspace]
members = ["functions"]

[tool.uv.sources]
sst = { git = "https://github.com/sst/sst.git", subdirectory = "sdk/python", branch = "dev" }
