[project]
name = "functions"
version = "0.1.0"
description = "Lambda function handlers"
dependencies = ["sst", "fastapi==0.115.8", "mangum==0.19.0"]
requires-python = "==3.12.*"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
sst = { git = "https://github.com/sst/sst.git", branch = "dev", subdirectory = "sdk/python" }
